fixed errors project

--- a/app/IT-and-e-commerce.html
+++ b/app/IT-and-e-commerce.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="header__logos">
                     <a href="index.html">
-                        <img class="header__logo" src="./img/Logo.jpg" alt="logo">
+                        <img class="header__logo" src="./img/icons/Logo.jpg" alt="logo">
                     </a>
                     <div class="header__logo-page">Services</div>
                 </div>
@@ -51,7 +51,7 @@
                     </div>
                     <nav class="header__item">
                         <a class="header__item-link" href="./about.html">about us</a>
-                        <a class="header__item-link" href="./services.html">services</a>
+                        <a class="header__item-link header__item-link--active" href="./services.html">services</a>
                         <a class="header__item-link" href="./team.html">team</a>
                         <a class="header__item-link" href="./publications.html">publications</a>
                         <a class="header__item-link" href="./contact.html">contact</a>
@@ -62,7 +62,7 @@
         <div class="container container--s">
             <div class="it">
                 <div class="it__body">
-                    <img class="it__body-pic img-resonsive" src="./img/Icon-it.png" alt="it">
+                    <img class="it__body-pic img-resonsive" src="./img/icons/Icon-it.png" alt="it">
                     <h1 class="it__body-title">IT and e-commerce</h1>
                     <p class="it__body-text">An endless stream of contracts, tax issues, labor relations, corporate papers - legal work distracts you from doing business. But there is not much work to do to hire an in-house lawyer.</p>
                     <p class="it__body-text">In addition, over time, the work will become the same type and uninteresting for a full-time lawyer. And we know very well how difficult it is to find a good candidate with experience in the field of information technology in Ukraine.</p>
