--- a/app/about.html
+++ b/app/about.html
@@ -27,7 +27,7 @@
         </div>
         <div class="header__logos">
             <a href="index.html">
-                <img class="header__logo" src="./img/Logo-dark.jpg" alt="logo">
+                <img class="header__logo" src="./img/icons/Logo-dark.jpg" alt="logo">
             </a>
             <div class="header__logo-page">about us</div>
         </div>
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <nav class="header__item">
-                <a class="header__item-link" href="./about.html">about us</a>
+                <a class="header__item-link header__item-link--active" href="./about.html">about us</a>
                 <a class="header__item-link" href="./services.html">services</a>
                 <a class="header__item-link" href="./team.html">team</a>
                 <a class="header__item-link" href="./publications.html">publications</a>
@@ -63,7 +63,7 @@
             <div class="container container--s">
                 <div class="turn__body">
                     <div class="turn__content">
-                        <h3 class="turn__content-title">We turn over the idea of legal services</h2>
+                        <h3 class="turn__content-title">We turn over the idea of legal services</h3>
                         <p class="turn__content-text">Consolidating many years of experience and practice, the company's lawyers accompany complex projects and achieve the adoption of a number of decisions that are important for the industry. Many people form the practice of applying the law of the sea in Ukraine.</p>
                         <p class="turn__content-text">HLEGAL is a reliable business partner, confirmed by stable cooperation with international law firms, the trust of large Ukrainian and international companies, and the recognition of professional ratings.</p>
                     </div>
@@ -126,32 +126,32 @@
                     <div class="achievements__list">
                         <div class="achievements__list-body">
                             <article class="achievements__list-card">
-                                <img class="img-resonsive achievements__list-img" src="./img/aboutus/Achievment-1.png">
+                                <img class="img-resonsive achievements__list-img" src="./img/aboutus/Achievment-1.png" alt="Achievment-1">
                             </article>
                         </div>
                         <div class="achievements__list-body">
                             <article class="achievements__list-card">
-                                <img class="img-resonsive achievements__list-img" src="./img/aboutus/Achievment-2.png">
+                                <img class="img-resonsive achievements__list-img" src="./img/aboutus/Achievment-2.png" alt="Achievment-2">
                             </article>
                         </div>
                         <div class="achievements__list-body">
                             <article class="achievements__list-card">
-                                <img class="img-resonsive achievements__list-img"  src="./img/aboutus/Achievment-3.png">
+                                <img class="img-resonsive achievements__list-img"  src="./img/aboutus/Achievment-3.png" alt="Achievment-3">
                             </article>
                         </div>
                         <div class="achievements__list-body">
                             <article class="achievements__list-card">
-                                <img class="img-resonsive achievements__list-img"  src="./img/aboutus/Achievment-4.png">
+                                <img class="img-resonsive achievements__list-img"  src="./img/aboutus/Achievment-4.png" alt="Achievment-4">
                             </article>
                         </div>
                         <div class="achievements__list-body">
                             <article class="achievements__list-card">
-                                <img class="img-resonsive achievements__list-img"  src="./img/aboutus/Achievment-3.png">
+                                <img class="img-resonsive achievements__list-img"  src="./img/aboutus/Achievment-3.png" alt="Achievment-3">
                             </article>
                         </div>
                         <div class="achievements__list-body">
                             <article class="achievements__list-card">
-                                <img class="img-resonsive achievements__list-img"  src="./img/aboutus/Achievment-4.png">
+                                <img class="img-resonsive achievements__list-img"  src="./img/aboutus/Achievment-4.png" alt="Achievment-4">
                             </article>
                     </div>
                 </div>
