--- a/app/biography-Kobzar.html
+++ b/app/biography-Kobzar.html
@@ -25,7 +25,7 @@
         </div>
         <div class="header__logos">
             <a href="index.html">
-                <img class="header__logo" src="./img/Logo-dark.jpg" alt="logo">
+                <img class="header__logo" src="./img/icons/Logo-dark.jpg" alt="logo">
             </a>
             <div class="header__logo-page">team</div>
         </div>
@@ -50,7 +50,7 @@
             <nav class="header__item">
                 <a class="header__item-link" href="./about.html">about us</a>
                 <a class="header__item-link" href="./services.html">services</a>
-                <a class="header__item-link" href="./team.html">team</a>
+                <a class="header__item-link header__item-link--active" href="./team.html">team</a>
                 <a class="header__item-link" href="./publications.html">publications</a>
                 <a class="header__item-link" href="./contact.html">contact</a>
             </nav>
@@ -67,7 +67,7 @@
                         <h1 class="biography__body-name">Oksana Kobzar</h1>
                         <div class="biography__body-contact">
                             <p class="biography__body-jobtitle">Equity partner, Attorney-at-law</p>
-                            <a class="biography__body-mail" href="mail:kobzar@forstudy.space">kobzar@forstudy.space</a>
+                            <a class="biography__body-mail" href="mailto:kobzar@forstudy.space">kobzar@forstudy.space</a>
                             <a class="biography__body-profile" href="#">LinkedIn profile</a>
                         </div>
                     </div>
