--- a/app/contact.html
+++ b/app/contact.html
@@ -25,7 +25,7 @@
             </div>
             <div class="header__logos">
                 <a href="index.html">
-                    <img class="header__logo" src="./img/Logo-dark.jpg" alt="logo">
+                    <img class="header__logo" src="./img/icons/Logo-dark.jpg" alt="logo">
                 </a>
                 <div class="header__logo-page">contact</div>
             </div>
@@ -52,7 +52,7 @@
                     <a class="header__item-link" href="./services.html">services</a>
                     <a class="header__item-link" href="./team.html">team</a>
                     <a class="header__item-link" href="./publications.html">publications</a>
-                    <a class="header__item-link" href="./contact.html">contact</a>
+                    <a class="header__item-link header__item-link--active" href="./contact.html">contact</a>
                 </nav>
             </div>
     </header>
