--- a/app/index.html
+++ b/app/index.html
@@ -29,9 +29,8 @@
                 </div>
                 <div class="header__logos">
                     <a href="index.html">
-                        <img class="header__logo" src="./img/Logo.jpg" alt="logo">
+                        <img class="header__logo" src="./img/icons/Logo.jpg" alt="logo">
                     </a>
-                    <div class="header__logo-page visually-hidden">about us</div>
                 </div>
                 <div class="header__menu">
                     <button class="header__menu-btn" type="button">
@@ -52,7 +51,7 @@
                         </div>
                     </div>
                     <nav class="header__item">
-                        <a class="header__item-link" href="./about.html">about us</a>
+                        <a class="header__item-link header__item-link--active" href="./about.html">about us</a>
                         <a class="header__item-link" href="./services.html">services</a>
                         <a class="header__item-link" href="./team.html">team</a>
                         <a class="header__item-link" href="./publications.html">publications</a>
@@ -91,42 +90,42 @@
                 <div class="services__list">
                     <article class="services__list-card">
                         <div class="services__list-pic">
-                            <img src="./img/Icon-it.png" alt="it">
+                            <img src="./img/icons/Icon-it.png" alt="it">
                         </div>
                         <a class="services__list-link" href="IT-and-e-commerce.html">IT and e-commerce</a>
                         <p class="services__list-text">An endless stream of contracts, tax issues, labor relations, corporate papers - legal work distracts you from doing business. But there is not much work to do to hire an in-house lawyer.</p>
                     </article>
                     <article class="services__list-card">
                         <div class="services__list-pic">
-                            <img src="./img/Icon-support.png" alt="support">
+                            <img src="./img/icons/Icon-support.png" alt="support">
                         </div>
                         <a class="services__list-link" href="">Comprehensive daily legal support</a>
                         <p class="services__list-text">In addition, over time, the work will become the same type and uninteresting for a full-time lawyer. And we know very well how difficult it is to find a good candidate with experience in the field of information technology in Ukraine.</p>
                     </article>
                     <article class="services__list-card">
                         <div class="services__list-pic">
-                            <img src="./img/Icon-structuring.png" alt="structuring">
+                            <img src="./img/icons/Icon-structuring.png" alt="structuring">
                         </div>
                         <a class="services__list-link" href="">Structuring corporate relationships</a>
                         <p class="services__list-text">Instead of just providing legal services, we will hire a lawyer or a whole team that will fit into the daily life of your company.</p>
                     </article>
                     <article class="services__list-card">
                         <div class="services__list-pic">
-                            <img src="./img/Icon-building.png" alt="Building">
+                            <img src="./img/icons/Icon-building.png" alt="Building">
                         </div>
                         <a class="services__list-link" href="">Building contractual relations</a>
                         <p class="services__list-text">Once a week, or week after month, you have your own lawyer by your side. Anyone in the company can catch it at the coffee maker and just talk about current affairs instead of waiting for update status.</p>
                     </article>
                     <article class="services__list-card">
                         <div class="services__list-pic">
-                            <img src="./img/Icon-protection.png" alt="Protection">
+                            <img src="./img/icons/Icon-protection.png" alt="Protection">
                         </div>
                         <a class="services__list-link" href="">Protection of business, intellectual property</a>
                         <p class="services__list-text">And all the other time he will work on new diverse projects, so he will definitely not stop in professional development. One way or another, all Axon Partners will work for you instead of a corporate lawyer.</p>
                     </article>
                     <article class="services__list-card">
                         <div class="services__list-pic">
-                            <img src="./img/Icon-judicial.png" alt="Judicial">
+                            <img src="./img/icons/Icon-judicial.png" alt="Judicial">
                         </div>
                         <a class="services__list-link" href="">Judicial representation</a>
                         <p class="services__list-text">Is it a small, medium-sized company or a market leader? Local business or multinational company? Do you have your own legal department or not?</p>
@@ -155,7 +154,7 @@
                 </article>
                 <article class="team__body">
                     <div class="team__pic">
-                        <img class="team__pic-img img-resonsive" src="./img/Team-5.jpg" srcset="./img/team/Team-5@2x.jpg" alt="face">
+                        <img class="team__pic-img img-resonsive" src="./img/team/Team-5.jpg" srcset="./img/team/Team-5@2x.jpg" alt="face">
                     </div>
                     <div class="team__content">
                         <a class="team__content-link" href="./team.html">команда
