--- a/app/publications.html
+++ b/app/publications.html
@@ -25,7 +25,7 @@
         </div>
         <div class="header__logos">
             <a href="index.html">
-                <img class="header__logo" src="./img/Logo-dark.jpg" alt="logo">
+                <img class="header__logo" src="./img/icons/Logo-dark.jpg" alt="logo">
             </a>
             <div class="header__logo-page">publications</div>
         </div>
@@ -51,7 +51,7 @@
                 <a class="header__item-link" href="./about.html">about us</a>
                 <a class="header__item-link" href="./services.html">services</a>
                 <a class="header__item-link" href="./team.html">team</a>
-                <a class="header__item-link" href="./publications.html">publications</a>
+                <a class="header__item-link header__item-link--active" href="./publications.html">publications</a>
                 <a class="header__item-link" href="./contact.html">contact</a>
             </nav>
         </div>
