--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
                         </div>
                     </div>
                     <nav class="header__item">
-                        <a class="header__item-link header__item-link--active" href="./about.html">about us</a>
+                        <a class="header__item-link" href="./about.html">about us</a>
                         <a class="header__item-link" href="./services.html">services</a>
                         <a class="header__item-link" href="./team.html">team</a>
                         <a class="header__item-link" href="./publications.html">publications</a>
