--- a/app/IT-and-e-commerce.html
+++ b/app/IT-and-e-commerce.html
@@ -40,14 +40,20 @@
                             <path d="M7 22.5H25" stroke="white" stroke-width="2"/>
                         </svg>
                     </button>
+                    <div class="header__overlay"></div>
                     <div class="header__list">
+                        <button class="header__list-close">
+                            <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M7 7L25 25" stroke="#EC6F5D" stroke-width="2"/>
+                                <path d="M25 7L7 25" stroke="#EC6F5D" stroke-width="2"/>
+                            </svg>
+                        </button>
                         <div class="header__list-box">
                             <a class="header__list-link" href="./about.html">about us</a>
                             <a class="header__list-link" href="./services.html">services</a>
                             <a class="header__list-link" href="./team.html">team</a>
                             <a class="header__list-link" href="./publications.html">publications</a>
                             <a class="header__list-link" href="./contact.html">contact</a>
-                            <button class="header__list-btn"  type="button">exit</button>
                         </div>
                     </div>
                     <nav class="header__item">
