--- a/app/contact.html
+++ b/app/contact.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contact</title>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body class="body">
@@ -37,16 +38,22 @@
                         <path d="M7 22.5H25" stroke="white" stroke-width="2"/>
                     </svg>
                 </button>
-                <div class="header__list">
-                    <div class="header__list-box">
-                        <a class="header__list-link" href="./about.html">about us</a>
-                        <a class="header__list-link" href="./services.html">services</a>
-                        <a class="header__list-link" href="./team.html">team</a>
-                        <a class="header__list-link" href="./publications.html">publications</a>
-                        <a class="header__list-link" href="./contact.html">contact</a>
-                        <button class="header__list-btn"  type="button">exit</button>
+                <div class="header__overlay"></div>
+                    <div class="header__list">
+                        <button class="header__list-close">
+                            <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M7 7L25 25" stroke="#EC6F5D" stroke-width="2"/>
+                                <path d="M25 7L7 25" stroke="#EC6F5D" stroke-width="2"/>
+                            </svg>
+                        </button>
+                        <div class="header__list-box">
+                            <a class="header__list-link" href="./about.html">about us</a>
+                            <a class="header__list-link" href="./services.html">services</a>
+                            <a class="header__list-link" href="./team.html">team</a>
+                            <a class="header__list-link" href="./publications.html">publications</a>
+                            <a class="header__list-link" href="./contact.html">contact</a>
+                        </div>
                     </div>
-                </div>
                 <nav class="header__item">
                     <a class="header__item-link" href="./about.html">about us</a>
                     <a class="header__item-link" href="./services.html">services</a>
@@ -118,5 +125,9 @@
             </div>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/all.min.js"></script>
 </body>
 </html>
